--- a/index.html
+++ b/index.html
@@ -72,5 +72,6 @@
         <a href="/school/八年级下册英语1-4单元总复习【学校 for printing】.docx" class="list-group-item list-group-item-action">八年级下册英语1-4单元总复习【学校 for printing】.docx</a>
         <a href="/school/八年级下册英语1-4单元总复习【学校 for printing】.pdf" class="list-group-item list-group-item-action">八年级下册英语1-4单元总复习【学校 for printing】.pdf</a>
     </div>
+     <img src="https://gitee.com/tomcup/tomcup/blob/master/img/Niagara_Rainbow.jpg">
   </body>
 </html>
