--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         </div>
         <div class="carousel-item">
           <img src="/img/雪山三角.jpg" class="d-block w-100" alt="img">
+          <h5 class="display-6">性格使然</h5>
+          <p>——■■ 2021年12月20日</p>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
