--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/img/雪山三角.jpg" class="d-block w-100" alt="img">
-          <h5 class="display-6">性格使然</h5>
-          <p>——■■ 2021年12月20日</p>
+          <img src="/img/雪山三角.jpg" class="d-block w-100" alt="img"
+            <div class="carousel-caption d-none d-md-block text-dark">
+              <h5 class="display-6">性格使然</h5>
+              <p>——■■ 2021年12月20日</p>
+            </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
